src/objects/Match_Result__c.object
<CustomObject>
    <fields>
        <fullName>Champion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Champion</label>
        <referenceTo>Team__c</referenceTo>
        <relationshipLabel>Match Results (Champion)</relationshipLabel>
        <relationshipName>Match_Results2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Highest_run_scorer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Highest run scorer</label>
        <referenceTo>Player__c</referenceTo>
        <relationshipLabel>Match Results (Highest run scorer)</relationshipLabel>
        <relationshipName>Match_Results4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Highest_wicket_taker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Highest wicket taker</label>
        <referenceTo>Player__c</referenceTo>
        <relationshipLabel>Match Results (Highest wicket taker)</relationshipLabel>
        <relationshipName>Match_Results3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Losing_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Losing Team</label>
        <referenceTo>Team__c</referenceTo>
        <relationshipLabel>Match Results (Losing Team)</relationshipLabel>
        <relationshipName>Match_Results1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ManOfFinal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ManOfFinal</label>
        <referenceTo>Player__c</referenceTo>
        <relationshipLabel>Match Results (ManOfFinal)</relationshipLabel>
        <relationshipName>Match_Results2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ManOfMatch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ManOfMatch</label>
        <referenceTo>Player__c</referenceTo>
        <relationshipLabel>Match Results</relationshipLabel>
        <relationshipName>Match_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Match__c</fullName>
        <label>Match</label>
        <referenceTo>Match__c</referenceTo>
        <relationshipLabel>Match Results</relationshipLabel>
        <relationshipName>Match_Results</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Player_of_tournament__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Player of tournament</label>
        <referenceTo>Player__c</referenceTo>
        <relationshipLabel>Match Results (Player of tournament)</relationshipLabel>
        <relationshipName>Match_Results1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Runner_up__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Runner-up</label>
        <referenceTo>Team__c</referenceTo>
        <relationshipLabel>Match Results (Runner-up)</relationshipLabel>
        <relationshipName>Match_Results3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Winning_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Winning Team</label>
        <referenceTo>Team__c</referenceTo>
        <relationshipLabel>Match Results</relationshipLabel>
        <relationshipName>Match_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Match Result</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Match__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MR-{00000}</displayFormat>
        <label>Match Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Match Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>